--- a/packages/cbc/layout/reuse-tab/reuse-tab.component.html
+++ b/packages/cbc/layout/reuse-tab/reuse-tab.component.html
@@ -1,9 +1,17 @@
-<nz-tabset #tabset [nzSelectedIndex]="pos" [nzAnimated]="false" [nzType]="tabType"
-  [nzTabBarExtraContent]="tabBarExtraContent" [nzTabBarGutter]="tabBarGutter" [nzTabBarStyle]="tabBarStyle">
+<nz-tabset
+  #tabset
+  [nzSelectedIndex]="pos"
+  [nzAnimated]="false"
+  [nzType]="tabType"
+  [nzTabBarExtraContent]="tabBarExtraContent"
+  [nzTabBarGutter]="tabBarGutter"
+  [nzTabBarStyle]="tabBarStyle"
+>
   <nz-tab *ngFor="let i of list; let index = index" [nzTitle]="titleTemplate" (nzClick)="_to(index)">
     <ng-template #titleTemplate>
-      <div [reuse-tab-context-menu]="i" [customContextMenu]="customContextMenu" class="reuse-tab__name"
-        [attr.title]="i.title">
+      <i *ngIf="!!i.icon" nz-icon [nzIconfont]="i.icon" class="reuse-tab__icon"></i>
+      <!-- <div [reuse-tab-context-menu]="i" [customContextMenu]="customContextMenu" class="reuse-tab__name" [attr.title]="i.title"> -->
+      <div class="reuse-tab__name" [attr.title]="i.title">
         <span [class.reuse-tab__name-width]="tabMaxWidth" [style.max-width.px]="tabMaxWidth">
           {{ i.title }}
         </span>
