--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -176,6 +176,11 @@
 
     display: inline-block;
   }
+  &-column-setting-popover {
+    .ant-popover-inner-content {
+      padding: 0;
+    }
+  }
 
   @media screen and (min-width: @nz-table-rep-min-width) {
     &__width {
