--- a/packages/cbc/web/st/st.component.html
+++ b/packages/cbc/web/st/st.component.html
@@ -157,7 +157,7 @@
       </th>
     </tr>
     <tr class="st-thead-row-filter" *ngIf="showFilters && _filterRow?.length">
-      <th *ngIf="showFilters" nzWidth="50px"></th>
+      <th *ngIf="showCheckbox" nzWidth="50px"></th>
       <th *ngFor="let i of _filterRow; index as index" (keyup.enter)="_filterConfirm(i.column)">
         <ng-container [ngSwitch]="i.column.filter?.type">
           <ng-container *ngSwitchCase="i.column.filter?.type === null ? null : 'nevermatch'"></ng-container>
