--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -88,8 +88,11 @@
     &@{st-prefix}-row-odd {
       background:rgba(0,0,0,0.02);
     }
-    &@{st-prefix}-row-red {
+    &@{st-prefix}-row-error {
       background: #FFA39E;
+    }
+    &@{st-prefix}-row-secondary {
+      background: #d8dffa;
     }
     &@{st-prefix}-row-selected {
       background:rgba(230,247,255,1);
