--- a/packages/theme/system/delon/_acl.less
+++ b/packages/theme/system/delon/_acl.less
@@ -1,6 +1,6 @@
 /**
- * [ACL](https://ng-alain.com/acl/control) 使用 `display: none` 隐藏未授权元素
- * [ACL](https://ng-alain.com/acl/control) Hides the unauthorized element with `display: none`
+ * [ACL](https://www.cityocean.com/acl/control) 使用 `display: none` 隐藏未授权元素
+ * [ACL](https://www.cityocean.com/acl/control) Hides the unauthorized element with `display: none`
  */
 .acl__hide {
   display: none !important;
