多标签服务及组件移到微服务模块。

--- a/packages/theme/default.less
+++ b/packages/theme/default.less
@@ -4,4 +4,5 @@
 @import './layout/default/index.less';
 @import './layout/fullscreen/index.less';
 @import '../cbc/index.less';
+@import '../cms/index.less';
 @import '../chart/index.less';
