--- a/packages/theme/theme-default.less
+++ b/packages/theme/theme-default.less
@@ -3,4 +3,5 @@
 @import './layout/default/theme-default.less';
 @import './layout/fullscreen/theme-default.less';
 @import '../cbc/theme-default.less';
+@import '../cms/theme-default.less';
 @import '../chart/theme-default.less';
