解决站点构建问题

--- a/src/styles.less
+++ b/src/styles.less
@@ -8,6 +8,7 @@
 // 全部引入
 @import '../packages/theme/system/index.less';
 @import '../packages/cbc/index.less';
+@import '../packages/cms/index.less';
 @import '../packages/chart/index.less';
 @import '../packages/theme/layout/default/index.less';
 
@@ -21,16 +22,16 @@
 html {
   .st-thead-row-filter {
     th {
-      background   : #ffffff !important;
+      padding: 10px 16px !important;
+      background: #fff !important;
       border-bottom: none !important;
-      padding      : 10px 16px !important;
     }
   }
 
   .ant-table-thead>tr:first-child>th {
-    overflow        : hidden;
-    white-space     : nowrap;
-    text-align      : left;
+    overflow: hidden;
+    white-space: nowrap;
+    text-align: left;
     background-color: #f5f5f5ff;
   }
 }
