--- a/packages/cbc/web/st/column-config.component.less
+++ b/packages/cbc/web/st/column-config.component.less
@@ -78,3 +78,10 @@
 .cdk-drag-animating {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
+
+.icon-setting {
+  padding-right: 13px;
+  margin-right: -13px;
+
+  cursor: pointer;
+}
