fix: 修改报表组件样式

--- a/packages/cbc/business/report-viewer/style/index.less
+++ b/packages/cbc/business/report-viewer/style/index.less
@@ -5,6 +5,7 @@
   .report-viewer-container {
     position: relative;
     min-height: 300px;
+    padding: 0 120px;
 
     &>button {
       width: 60px;
