--- a/packages/cbc/web/st/style/index.less
+++ b/packages/cbc/web/st/style/index.less
@@ -1,4 +1,6 @@
 @import '../../../../theme/theme-default.less';
+@import "~ng-zorro-antd/resizable/style/entry.less";
+
 @st-prefix: ~'.st';
 
 @{st-prefix} {
